--- a/src/public/css/global.css
+++ b/src/public/css/global.css
@@ -5,3 +5,13 @@ body {
 .form {
     max-width: 550px;
 }
+
+.btn-facebook {
+    color: white;
+    background-color: #4267b2;
+}
+
+.btn-facebook:hover {
+    color: white;
+    background-color: #2b4a88;
+}
